Report Designer module update api completed